--- a/MvcProje/Views/Category/Index.cshtml
+++ b/MvcProje/Views/Category/Index.cshtml
@@ -3,6 +3,9 @@
     Layout = null;
 }
 
+<link href="~/Content/bootstrap.min.css" rel="stylesheet"/>
+
+
 <!DOCTYPE html>
 
 <html>
@@ -13,13 +16,14 @@
 <body>
     <div>
         <p>Samet HANCI</p>
-        <table class="table table-hover table-striped">
+        <table class="table table-hover table-bordered">
             <thead>
                 <tr>
                     <th scope="col">Id</th>
                     <th scope="col">Kategori Adı</th>
                     <th scope="col">Kategori Açıklaması</th>
                     <th scope="col">Kategori Durumu</th>
+                    <th scope="col">Güncelle</th>
                 </tr>
             </thead>
             <tbody>
@@ -28,21 +32,25 @@
                     <td>Spor</td>
                     <td>Burası spor kategorisidir.</td>
                     <td>Aktif</td>
+                    <td><button class="btn btn-success">Güncelle</button></td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
                     <td>Eğitim</td>
                     <td>Burası eğitim kategorisidir.</td>
                     <td>Aktif</td>
+                    <td><button class="btn btn-success">Güncelle</button></td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td>Kitap</td>
                     <td>Burası kitap kategorisidir.</td>
                     <td>Aktif</td>
+                    <td><button class="btn btn-success">Güncelle</button></td>
                 </tr>
             </tbody>
         </table>
+        <button class="btn btn-info">Yeni Kategori Ekle</button>
     </div>
 </body>
 </html>
