--- a/MvcProje/Views/Category/GetCategoryList.cshtml
+++ b/MvcProje/Views/Category/GetCategoryList.cshtml
@@ -38,6 +38,7 @@
                 }
             </tbody>
         </table>
+        <a href="/Category/AddCategory" class="btn btn-success">Yeni Kategori</a>
     </div>
 </body>
 </html>
